<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.schegge</groupId>
  <artifactId>freshmarker</artifactId>
  <version>0.5.1-SNAPSHOT</version>
  <url>https://gitlab.com/schegge/freshmarker.git</url>
  <name>FreshMarker</name>
  <description>A simple template engine based loosely on the FreeMarker syntax. FreshMarker is implemented in Java 17
    and supports the `java.time` API and Records.
  </description>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Jens Kaiser</name>
      <email>schegge42@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <url>https://gitlab.com/schegge/freshmarker.git</url>
    <connection>scm:git:https://gitlab.com/schegge/freshmarker.git</connection>
    <developerConnection>scm:git:https://gitlab.com/schegge/freshmarker.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.jupiter.version>5.9.2</junit.jupiter.version>
    <auto-service.version>1.0-rc6</auto-service.version>
    <hamcrest.version>2.2</hamcrest.version>
    <slf4j.version>2.0.3</slf4j.version>
    <jacoco.version>0.8.8</jacoco.version>
    <sonar.organization>schegge</sonar.organization>
  </properties>

  <dependencies>
    <!--dependency>
      <groupId>org.congocc</groupId>
      <artifactId>org.congocc.parser.generator</artifactId>
      <version>2.0.0-RC5</version>
    </dependency-->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.36</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.4.12</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.3.0</version>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
            <configuration>
              <flattenMode>oss</flattenMode>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/ccc</source>
                <source>${project.build.directory}/generated-sources/jcc</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <phase>generate-resources</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>java</executable>
              <arguments>
                <argument>-classpath</argument>
                <argument>${project.basedir}/src/main/lib/javacc21-220206.jar</argument>
                <argument>com.javacc.Main</argument>
                <argument>-jdk11</argument>
                <argument>-d</argument>
                <argument>${project.build.directory}/generated-sources/jcc</argument>
                <argument>src/main/resources/javacc/FTL.javacc</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.13</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.6.3</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <detectJavaApiLink>false</detectJavaApiLink>
              <encoding>UTF-8</encoding>
              <excludePackageNames>com.javacc.parser.*</excludePackageNames>
              <additionalDependencies>
                <additionalDependency>
                  <groupId>javacc21</groupId>
                  <artifactId>javacc21</artifactId>
                  <version>220206</version>
                  <systemPath>${project.basedir}/src/main/lib/javacc21-220206.jar</systemPath>
                </additionalDependency>
              </additionalDependencies>
              <doclint>none</doclint>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M3</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>3.0.0-M3</version>
        <executions>
          <execution>
            <phase>prepare-package</phase>
            <goals>
              <goal>report-only</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <configuration>
          <rules>
            <rule>
              <element>BUNDLE</element>
              <limits>
                <limit>
                  <counter>COMPLEXITY</counter>
                  <value>COVEREDRATIO</value>
                  <minimum>0.25</minimum>
                </limit>
              </limits>
            </rule>
          </rules>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-check</id>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
            <manifestEntries>
              <Built-By>jaz</Built-By>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <!--plugin>
        <groupId>org.congocc</groupId>
        <artifactId>org.congocc.maven.plugin</artifactId>
        <version>2.0.0-RC5</version>
        <executions>
          <execution>
            <goals>
              <goal>ccc-generate</goal>
            </goals>
            <configuration>
              <grammarFile>src/main/ccc/FreshMarker/FreshMarker.ccc</grammarFile>
              <outputDir>target/generated-sources/ccc</outputDir>
              <jdk>17</jdk>
            </configuration>
          </execution>
        </executions>
      </plugin-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>UTF-8</encoding>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>javacc21</groupId>
            <artifactId>javacc21</artifactId>
            <version>220206</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/lib/javacc21-220206.jar</systemPath>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>